--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="AboutUs/style.css">
+    <link rel="stylesheet" href="/Group17/styles/styleAbout.css">
     <title>About Us</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
             Fetal-X
         </div>
          <div class="menu">
-            <a href="http://127.0.0.1:5500/S.E-Group-17/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexDoctor.html">Doctor's Page</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexWe.html">We Recommend</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexContact.html">Contact Us</a>
+            <a href="/Group17/index.html">Home</a>
+            <a href="/Group17/indexDoctor.html">Doctor's Page</a>
+            <a href="/Group17/indexWe.html">We Recommend</a>
+            <a href="/Group17/indexContact.html">Contact Us</a>
          </div>
          <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
@@ -56,11 +56,11 @@
 
         <h2>Team</h2>
         <ul>
-            <li><img src="/S.E-Group-17/AboutUs/images/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
-            <li><img src="/S.E-Group-17/AboutUs/images/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
-            <li><img src="/S.E-Group-17/AboutUs/images/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
-            <li><img src="/S.E-Group-17/AboutUs/images/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam</li>
-            <li><img src="/S.E-Group-17/AboutUs/images/Aryan.jpeg" alt="Aryan"><br>Aryan Surve</li>
+            <li><img src="/Group17/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam</li>
+            <li><img src="/Group17/Images/AboutUs/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
+            <li><img src="/Group17/Images/AboutUs/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
+            <li><img src="/Group17/Images/AboutUs/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
+            <li><img src="/Group17/Images/AboutUs/Aryan.jpeg" alt="Aryan"><br>Aryan Surve</li>
         </ul>
     </section>
 
