--- a/Doctor.html
+++ b/Doctor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor's Page</title>
-    <link rel="stylesheet" href="DoctorPage/style.css">
+    <link rel="stylesheet" href="/Group17/styles/styleDoctor.css">
 </head>
 
 <body>
@@ -14,10 +14,10 @@
             Fetal-X
         </div>
         <div class="mennu">
-            <a href="http://127.0.0.1:5500/S.E-Group-17/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexAbout.html">About Us</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexWe.html">We Recommend</a>
-            <a href="http://127.0.0.1:5500/ContactUs/index.html">Contact Us</a>
+            <a href="/Group17/index.html">Home</a>
+            <a href="/Group17/About.html">About Us</a>
+            <a href="/Group17/Werecommend.html">We Recommend</a>
+            <a href="/Group17/Contact.html">Contact Us</a>
         </div>
 
     </nav>
@@ -55,33 +55,33 @@
                 <p><b>Email : </b><span>drpriyasharma@gmail.com</span></p>
                 <p><b>Phone Number : </b><span>+91 8890977808</span></p>
                 <p><b>Clinic Address : </b><span>Delhi, Delhi</span></p>
+            </div>
+            <div id="hyderabad" class="data">
+                <div class="image-container">
+                    <img class="image" src="DoctorPage/doc_images/RajeshReddy.jpeg" alt="Description">
                 </div>
-                <div id="hyderabad" class="data">
-                    <div class="image-container">
-                        <img class="image" src="DoctorPage/doc_images/RajeshReddy.jpeg" alt="Description">
-                    </div>
-                    <p><b>Full Name : </b><span>Dr. Rajesh Reddy</span></p>
-                    <p><b>Email : </b><span> drrajeshreddy@gmail.com</span></p>
-                    <p><b>Phone Number : </b><span>+91 9890789134</span></p>
-                    <p><b>Clinic Address : </b><span> Hyderabad, Telangana</span></p>
+                <p><b>Full Name : </b><span>Dr. Rajesh Reddy</span></p>
+                <p><b>Email : </b><span> drrajeshreddy@gmail.com</span></p>
+                <p><b>Phone Number : </b><span>+91 9890789134</span></p>
+                <p><b>Clinic Address : </b><span> Hyderabad, Telangana</span></p>
+            </div>
+            <div id="bangalore" class="data">
+                <div class="image-container">
+                    <img class="image" src="DoctorPage/doc_images/AnanyaGupta.jpeg" alt="Description">
                 </div>
-                <div id="bangalore" class="data">
-                    <div class="image-container">
-                        <img class="image" src="DoctorPage/doc_images/AnanyaGupta.jpeg" alt="Description">
-                    </div>
-                    <p><b>Full Name : </b><span>Dr. Ananya Gupta</span></p>
-                    <p><b>Email : </b><span>drananyagupta@gmail.com</span></p>
-                    <p><b>Phone Number : </b><span>+91 8099775564</span></p>
-                    <p><b>Clinic Address : </b><span> Bangalore, Karnataka</span></p>
+                <p><b>Full Name : </b><span>Dr. Ananya Gupta</span></p>
+                <p><b>Email : </b><span>drananyagupta@gmail.com</span></p>
+                <p><b>Phone Number : </b><span>+91 8099775564</span></p>
+                <p><b>Clinic Address : </b><span> Bangalore, Karnataka</span></p>
+            </div>
+            <div id="kolkata" class="data">
+                <div class="image-container">
+                    <img class="image" src="DoctorPage/doc_images/ArjunDas.jpeg" alt="Description">
                 </div>
-                <div id="kolkata" class="data">
-                    <div class="image-container">
-                        <img class="image" src="DoctorPage/doc_images/ArjunDas.jpeg" alt="Description">
-                    </div>
-                    <p><b>Full Name : </b><span>Dr. Arjun Das</span></p>
-                    <p><b>Email : </b><span>drarjundas@gmail.com</span></p>
-                    <p><b>Phone Number : </b><span> +91 7819234561</span></p>
-                    <p><b>Clinic Address : </b><span>Kolkata, West Bengal</span></p>
+                <p><b>Full Name : </b><span>Dr. Arjun Das</span></p>
+                <p><b>Email : </b><span>drarjundas@gmail.com</span></p>
+                <p><b>Phone Number : </b><span> +91 7819234561</span></p>
+                <p><b>Clinic Address : </b><span>Kolkata, West Bengal</span></p>
             </div>
             <div id="pune" class="data">
                 <div class="image-container">
