--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="Main_page/code/style.css" rel="stylesheet">
+    <link href="/Group17/styles/styleMain.css" rel="stylesheet">
     <title>Fetal-X</title>
 </head>
 <body>
@@ -14,11 +14,11 @@
                 Fetal-X
             </div>
              <div class="menu">
-                <a href="http://127.0.0.1:5500/Main_page/code/index.html">Home</a>
-                <a href="http://127.0.0.1:5500/S.E-Group-17/indexDoctor.html">Doctor's Page</a>
-                <a href="http://127.0.0.1:5500/S.E-Group-17/indexAbout.html">About Us</a>
-                <a href="http://127.0.0.1:5500/S.E-Group-17/indexWe.html">We Recommend</a>
-                <a href="http://127.0.0.1:5500/S.E-Group-17/indexContact.html">Contact Us</a>
+                <a href="/Group17/index.html">Home</a>
+                <a href="/Group17/Doctor.html">Doctor's Page</a>
+                <a href="/Group17/About.html">About Us</a>
+                <a href="/Group17/Werecommend.html">We Recommend</a>
+                <a href="/Group17/Contact.html">Contact Us</a>
              </div>
              <div class="Register">
                 <a href="http://152.67.9.127:5000/">Register</a>
@@ -26,7 +26,7 @@
         </nav>
         <section class="header-text">
             <span>Welcome!!!</span>
-            <h1>Fetal Abnormility Checkup</h1>
+            <h1>Brain Abnormility Checkup</h1>
             <br>
             <a href="http://152.67.9.127:5000/">Get your Result</a>
         </section>
