--- a/Werecommend.html
+++ b/Werecommend.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Werecommend/style.css">
+    <link rel="stylesheet" href="/Group17/styles/styleWe.css">
     <title>We Recommend</title>
 </head>
 
@@ -15,10 +15,10 @@
             Fetal-X
         </div>
         <div class="menu">
-            <a href="http://127.0.0.1:5500/S.E-Group-17/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexDoctor.html">Doctor's Page</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexAbout.html">About Us</a>
-            <a href="http://127.0.0.1:5500/S.E-Group-17/indexContact.html">Contact Us</a>
+            <a href="/Group17/index.html">Home</a>
+            <a href="/Group17/Doctor.html">Doctor's Page</a>
+            <a href="/Group17/About.html">About Us</a>
+            <a href="/Group17/Contact.html">Contact Us</a>
         </div>
         <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
