--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="/Group17/styles/styleMain.css" rel="stylesheet">
+    <link href="/Group17/styles/styleMain.css rel=" stylesheet">
     <title>B-care</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                Fetal-X
+                B-care
             </div>
              <div class="menu">
                 <a href="/Group17/index.html">Home</a>
