--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
     
     <nav>
         <div class="logo">
-            Fetal-X
+            B-care
         </div>
          <div class="menu">
             <a href="/Group17/index.html">Home</a>
