--- a/Doctor.html
+++ b/Doctor.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            Fetal-X
+            B-care
         </div>
         <div class="mennu">
             <a href="/Group17/index.html">Home</a>
