--- a/Werecommend.html
+++ b/Werecommend.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div class="logo">
-            Fetal-X
+            B-care
         </div>
         <div class="menu">
             <a href="/Group17/index.html">Home</a>
