--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            B-care
+            <img src="/Group17/Images/Logo.png">care
         </div>
         <div class="menu">
             <a href="/Group17/index.html">Home</a>
