--- a/About.html
+++ b/About.html
@@ -14,9 +14,9 @@
         </div>
          <div class="menu">
             <a href="/Group17/index.html">Home</a>
-            <a href="/Group17/indexDoctor.html">Doctor's Page</a>
-            <a href="/Group17/indexWe.html">We Recommend</a>
-            <a href="/Group17/indexContact.html">Contact Us</a>
+            <a href="/Group17/Doctor.html">Doctor's Page</a>
+            <a href="/Group17/Werecommend.html">We Recommend</a>
+            <a href="/Group17/Contact.html">Contact Us</a>
          </div>
          <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
@@ -56,7 +56,7 @@
 
         <h2>Team</h2>
         <ul>
-            <li><img src="/Group17/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam</li>
+            <li><img src="/Group17/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam(Leader)</li>
             <li><img src="/Group17/Images/AboutUs/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
             <li><img src="/Group17/Images/AboutUs/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
             <li><img src="/Group17/Images/AboutUs/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
