--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
             <a href="/Group17/index.html">Home</a>
             <a href="/Group17/Doctor.html">Doctor's Page</a>
             <a href="/Group17/Werecommend.html">We Recommend</a>
-            <a href="/Group17/Contact.html">Contact Us</a>
+            <a href="/Group17/ontact.html">Contact Us</a>
          </div>
          <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
