Group email used

--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
         function sendEmail() {
             Email.send({
                 Host: "smtp.gmail.com",
-                Username: "gmadye13@gmail.com",
+                Username: "s.e.group17.vesit@gmail.com",
                 Password: "password",
                 To: 'gmadye13@gmail.com',
                 From: document.getElementById('email').value,
