--- a/Contact.html
+++ b/Contact.html
@@ -54,9 +54,9 @@
         function sendEmail() {
             Email.send({
                 Host: "smtp.gmail.com",
-                Username: "s.e.group17.vesit@gmail.com",
+                Username: "gmadye13@gmail.com",
                 Password: "password",
-                To: 'gmadye13@gmail.com',
+                To: 's.e.group17.vesit@gmail.com',
                 From: document.getElementById('email').value,
                 Subject: "This is the subject",
                 Body: "And this is the body"
