--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Group17/styles/styleAbout.css">
+    <link rel="stylesheet" href="./Group17/styles/styleAbout.css">
     <title>About Us</title>
 </head>
 <body>
