--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/Group17/Images/Logo.png">care
+                <img src="./Group17/Images/Logo.png">care
             </div>
              <div class="menu">
-                <a href="/Group17/index.html">Home</a>
-                <a href="/Group17/Doctor.html">Doctor's Page</a>
-                <a href="/Group17/About.html">About Us</a>
-                <a href="/Group17/Werecommend.html">We Recommend</a>
-                <a href="/Group17/Contact.html">Contact Us</a>
+                <a href="./Group17/index.html">Home</a>
+                <a href="./Group17/Doctor.html">Doctor's Page</a>
+                <a href="./Group17/About.html">About Us</a>
+                <a href="./Group17/Werecommend.html">We Recommend</a>
+                <a href="./Group17/Contact.html">Contact Us</a>
              </div>
              <div class="Register">
                 <a href="http://152.67.9.127:5000/">Register</a>
