--- a/About.html
+++ b/About.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Group17/styles/styleAbout.css">
-    <title>About Us</title>
+    <link href="../Bcare/styles/styleAbout.css" rel=" stylesheet">
+    <title>About-Us</title>
 </head>
 <body>
-    
-    <nav>
-        <div class="logo">
-            <img src="/Group17/Images/Logo.png">care
-        </div>
-         <div class="menu">
-            <a href="/Group17/index.html">Home</a>
-            <a href="/Group17/Doctor.html">Doctor's Page</a>
-            <a href="/Group17/Werecommend.html">We Recommend</a>
-            <a href="/Group17/ontact.html">Contact Us</a>
-         </div>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./Group17/Images/Logo.png">care
+            </div>
+             <div class="menu">
+                <a href="./index.html">Home</a>
+                <a href="./Doctor.html">Doctor's Page</a>
+                <a href="./About.html">About Us</a>
+                <a href="./Werecommend.html">We Recommend</a>
+                <a href="./Contact.html">Contact Us</a>
+             </div>
          <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
          </div>
