--- a/Contact.html
+++ b/Contact.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="./Group17/styles/styleContact.css">
+    <link href="../Bcare/styles/styleContact.css" rel=" stylesheet">
+    <title>ContactUs</title>
 </head>
-
 <body>
-    <nav>
-        <div class="logo">
-            <img src="/Group17/Images/Logo.png">care
-        </div>
-        <div class="menu">
-            <a href="/Group17/index.html">Home</a>
-            <a href="/Group17/Doctor.html">Doctor's Page</a>
-            <a href="/Group17/About.html">About Us</a>
-            <a href="/Group17/Werecommend.html">We Recommend</a>
-        </div>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./Group17/Images/Logo.png">care
+            </div>
+             <div class="menu">
+                <a href="./index.html">Home</a>
+                <a href="./Doctor.html">Doctor's Page</a>
+                <a href="./About.html">About Us</a>
+                <a href="./Werecommend.html">We Recommend</a>
+                <a href="./Contact.html">Contact Us</a>
+             </div>       
         <div class="Register">
             <a href="http://152.67.9.127:5000/">Register</a>
         </div>
