--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="./Group17/styles/styleMain.css" rel=" stylesheet">
+    <link href="../Bcare/styles/styleMain.css" rel=" stylesheet">
     <title>B-care</title>
 </head>
 <body>
@@ -14,11 +14,11 @@
                 <img src="./Group17/Images/Logo.png">care
             </div>
              <div class="menu">
-                <a href="./Group17/index.html">Home</a>
-                <a href="./Group17/Doctor.html">Doctor's Page</a>
-                <a href="./Group17/About.html">About Us</a>
-                <a href="./Group17/Werecommend.html">We Recommend</a>
-                <a href="./Group17/Contact.html">Contact Us</a>
+                <a href="./index.html">Home</a>
+                <a href="./Doctor.html">Doctor's Page</a>
+                <a href="./About.html">About Us</a>
+                <a href="./Werecommend.html">We Recommend</a>
+                <a href="./Contact.html">Contact Us</a>
              </div>
              <div class="Register">
                 <a href="http://152.67.9.127:5000/">Register</a>
