--- a/Doctor.html
+++ b/Doctor.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor's Page</title>
-    <link rel="stylesheet" href="/Group17/styles/styleDoctor.css">
+    <link href="../Bcare/styles/styleDoctor.css" rel=" stylesheet">
+    <title>Doctor's Page</title>
 </head>
-
 <body>
-    <nav>
-        <div class="logo">
-            <img src="/Group17/Images/Logo.png">care
-        </div>
-        <div class="mennu">
-            <a href="/Group17/index.html">Home</a>
-            <a href="/Group17/About.html">About Us</a>
-            <a href="/Group17/Werecommend.html">We Recommend</a>
-            <a href="/Group17/Contact.html">Contact Us</a>
-        </div>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./Group17/Images/Logo.png">care
+            </div>
+             <div class="menu">
+                <a href="./index.html">Home</a>
+                <a href="./Doctor.html">Doctor's Page</a>
+                <a href="./About.html">About Us</a>
+                <a href="./Werecommend.html">We Recommend</a>
+                <a href="./Contact.html">Contact Us</a>
+             </div>
 
     </nav>
     <div class="wrapper">
