--- a/Doctor.html
+++ b/Doctor.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="./Group17/Images/Logo.png">care
+                <img src="../Bcare/Images/Logo.png">care
             </div>
              <div class="menu">
                 <a href="./index.html">Home</a>
