--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="./Group17/Images/Logo.png">care
+                <img src="../Bcare/Images/Logo.png">care
             </div>
              <div class="menu">
                 <a href="./index.html">Home</a>
