--- a/Doctor.html
+++ b/Doctor.html
@@ -42,7 +42,7 @@
         <div class="content">
             <div id="mumbai" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/SanjayPatel.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/SanjayPatel.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Sanjay Patel</span></p>
                 <p><b>Email : </b><span>drsanjaypatel@gmail.com</span></p>
@@ -51,7 +51,7 @@
             </div>
             <div id="delhi" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/PriyaSharma.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/PriyaSharma.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Priya Sharma</span></p>
                 <p><b>Email : </b><span>drpriyasharma@gmail.com</span></p>
@@ -60,7 +60,7 @@
             </div>
             <div id="hyderabad" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/RajeshReddy.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/RajeshReddy.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Rajesh Reddy</span></p>
                 <p><b>Email : </b><span> drrajeshreddy@gmail.com</span></p>
@@ -69,7 +69,7 @@
             </div>
             <div id="bangalore" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/AnanyaGupta.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/AnanyaGupta.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Ananya Gupta</span></p>
                 <p><b>Email : </b><span>drananyagupta@gmail.com</span></p>
@@ -78,7 +78,7 @@
             </div>
             <div id="kolkata" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/ArjunDas.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/ArjunDas.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Arjun Das</span></p>
                 <p><b>Email : </b><span>drarjundas@gmail.com</span></p>
@@ -87,7 +87,7 @@
             </div>
             <div id="pune" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/VikramSingh.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/VikramSingh.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Vikram Singh</span></p>
                 <p><b>Email : </b><span>drvikramsingh@gmail.com</span></p>
@@ -96,7 +96,7 @@
             </div>
             <div id="chennai" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/MeeraKrishnan.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/MeeraKrishnan.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Meera Krishnan</span></p>
                 <p><b>Email : </b><span>drmeerakrishnan@gmail.com</span></p>
@@ -105,7 +105,7 @@
             </div>
             <div id="udaipur" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/AdityaJain.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/AdityaJain.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Aditya Jain</span></p>
                 <p><b>Email : </b><span>dradityajain@gmail.com</span></p>
@@ -114,7 +114,7 @@
             </div>
             <div id="vadora" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/NehaShah.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/NehaShah.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Neha Shah</span></p>
                 <p><b>Email : </b><span>drnehashah@gmail.com</span></p>
@@ -123,7 +123,7 @@
             </div>
             <div id="indore" class="data">
                 <div class="image-container">
-                    <img class="image" src="/Group17/Images/Doctor/RahulMehta.jpeg" alt="Description">
+                    <img class="image" src="../Bcare/Images/Doctor/RahulMehta.jpeg" alt="Description">
                 </div>
                 <p><b>Full Name : </b><span>Dr. Rahul Mehta</span></p>
                 <p><b>Email : </b><span>drrahulmehta@gmail.com</span></p>
