--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
 
         <h2>Team</h2>
         <ul>
-            <li><img src="/Group17/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam(Leader)</li>
+            <li><img src="../Bcare/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam(Leader)</li>
             <li><img src="/Group17/Images/AboutUs/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
             <li><img src="/Group17/Images/AboutUs/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
             <li><img src="/Group17/Images/AboutUs/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
