--- a/About.html
+++ b/About.html
@@ -58,10 +58,10 @@
         <h2>Team</h2>
         <ul>
             <li><img src="../Bcare/Images/AboutUs/Vivek.jpg" alt="Vivek"><br>Vivek Venkatachalam(Leader)</li>
-            <li><img src="/Group17/Images/AboutUs/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
-            <li><img src="/Group17/Images/AboutUs/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
-            <li><img src="/Group17/Images/AboutUs/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
-            <li><img src="/Group17/Images/AboutUs/Aryan.jpeg" alt="Aryan"><br>Aryan Surve</li>
+            <li><img src="../Bcare/Images/AboutUs/Gouresh.jpg" alt="Gouresh"><br>Gouresh Madye</li>
+            <li><img src="../Bcare/Images/AboutUs/Nishika.jpg" alt="Nishika"><br>Nishika Gangwani</li>
+            <li><img src="../Bcare/Images/AboutUs/Vaishnavi.jpg" alt="Vaishnavi"><br>Vaishnavi Sonawne</li>
+            <li><img src="../Bcare/Images/AboutUs/Aryan.jpeg" alt="Aryan"><br>Aryan Surve</li>
         </ul>
     </section>
 
